Make the page responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
     <title>Kopiko</title>
 </head>
 <body>
@@ -21,6 +22,18 @@
                 <li><a href="#">CONTACT US</a></li>
             </ul>
         </nav>
+
+        <div class="mobile-nav">
+            <h2 class="menu" id="menu">Menu</h2>
+            <ul class="mobile-nav-items" id="nav-items">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Collection</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">News & Updates</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+
     </header>
 
     <main>
