Make the page responsive

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         <div class="mobile-nav">
             <h2 class="menu" id="menu">Menu</h2>
             <ul class="mobile-nav-items" id="nav-items">
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="mobile-home">Home</a></li>
                 <li><a href="#">Collection</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">News & Updates</a></li>
+                <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
